--- a/hw03_frequency_analysis/.golangci.yml
+++ b/hw03_frequency_analysis/.golangci.yml
@@ -8,5 +8,6 @@ linters-settings:
         allow: [
           "testing",
           "fmt",
+          "slices",
           "github.com/stretchr/testify/require",
         ]
